# duckdb-vba-dll

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/dackdb-admin/: Cargo.toml
crates/dackdb-admin/src/: lib.rs
crates/dackdb-core/: Cargo.toml
crates/dackdb-core/src/: api.rs  append.rs  classify.rs  conn.rs  ffi.rs  inbound.rs  level.rs  lib.rs  oleaut.rs  query.rs  raw.rs  schema.rs  value.rs  variant.rs
crates/dackdb-core/tests/: ddl_features.rs
crates/dackdb-r/: Cargo.toml
crates/dackdb-r/src/: lib.rs
crates/dackdb-rw/: Cargo.toml
crates/dackdb-rw/src/: lib.rs
docs/: index.html  manual.html
scripts/: package_release.ps1
tests/: vba_boundary_test.ps1
vba/: DackDb.template.bas  DackDbAdmin.bas  DackDbR.bas  DackDbRW.bas  generate_modules.ps1
